Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-34850

Rebalance In failed with durability=majority due to DCP_PREPARE requests received by consumer after Stream End [ETA 2019/7/12]

    XMLWordPrintable

Details

    Description

      Steps to reproduce

      1. Create a 2 node cluster - Both KV nodes
      Rebalance Overview

      +----------------+----------+--------------+
      | Nodes          | Services | Status       |
      +----------------+----------+--------------+
      | 172.23.105.155 | [u'kv']  | Cluster node |
      | 172.23.105.159 | None     | <--- IN ---  |
      +----------------+----------+--------------+
      

      2. Create a default bucket with replica=1
      3. Create 50000 docs with durability=Majority

      Bucket statistics

      +---------+---------+----------+-----+-------+------------+-----------+-----------+
      | Bucket  | Type    | Replicas | TTL | Items | RAM Quota  | RAM Used  | Disk Used |
      +---------+---------+----------+-----+-------+------------+-----------+-----------+
      | default | membase | 1        | 0   | 50000 | 4477419520 | 117879312 | 315611691 |
      +---------+---------+----------+-----+-------+------------+-----------+-----------+
      

      4. Rebalance In 2 new nodes and in parallel start another load of new 50k docs with durability=majority.

      Rebalance Overview

      +----------------+----------+--------------+
      | Nodes          | Services | Status       |
      +----------------+----------+--------------+
      | 172.23.105.155 | [u'kv']  | Cluster node |
      | 172.23.105.159 | [u'kv']  | Cluster node |
      | 172.23.105.205 | None     | <--- IN ---  |
      | 172.23.105.206 | None     | <--- IN ---  |
      +----------------+----------+--------------+
      

      NOTE: As soon as the rebalance starts we see a lot of com.couchbase.client.core.error.DurabilityImpossibleException for the cruds

      5. Rebalance fails

      Rebalance exited with reason {mover_crashed,
      {unexpected_exit,
      {'EXIT',<0.16126.1>,
      {{{{{child_interrupted,
      {'EXIT',<24878.11788.0>,socket_closed}},
      [{dcp_replicator,spawn_and_wait,1,
      [{file,"src/dcp_replicator.erl"},
      {line,249}]},
      {dcp_replicator,handle_call,3,
      [{file,"src/dcp_replicator.erl"},
      {line,127}]},
      {gen_server,try_handle_call,4,
      [{file,"gen_server.erl"},{line,636}]},
      {gen_server,handle_msg,6,
      [{file,"gen_server.erl"},{line,665}]},
      {proc_lib,init_p_do_apply,3,
      [{file,"proc_lib.erl"},{line,247}]}]},
      {gen_server,call,
      [<24878.11786.0>,get_partitions,
      infinity]}},
      {gen_server,call,
      ['dcp_replication_manager-default',
      {get_replicator_pid,833},
      infinity]}},
      {gen_server,call,
      [{'janitor_agent-default',
      'ns_1@172.23.105.205'},
      {if_rebalance,<0.7760.0>,
      {dcp_takeover,'ns_1@172.23.105.159',834}},
      infinity]}}}}}.
      Rebalance Operation Id = a02e72f645b01801f0013d88a6f15ea6 
      

      This defect may be similar to https://issues.couchbase.com/browse/MB-34832

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ritesh.agarwal Ritesh Agarwal
            ritesh.agarwal Ritesh Agarwal
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty