MB-34850: Refactor: Generalise DcpConsumer dispatch logic

Centralise the common DCP Consumer stream lookup and dispatch logic
from each of the different DcpConsumer methods to a new helper method
'lookupStreamAndDispatchMessage'.

Change-Id: I4a33797f91ebc837aa424831c935b43b31967460
Reviewed-on: http://review.couchbase.org/111744
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: James Harrison <james.harrison@couchbase.com>
Reviewed-by: Ben Huddleston <ben.huddleston@couchbase.com>